cmake_minimum_required (VERSION 3.10)
set(CMAKE_CXX_COMPILER g++)
set (CMAKE_CXX_STANDARD 17)

if (UNIX AND NOT APPLE)
	execute_process(COMMAND sudo apt-get install libx11-dev)
	execute_process(COMMAND sudo apt-get install xorg-dev libglu1-mesa-dev)
	execute_process(COMMAND sudo apt install libvulkan1 mesa-vulkan-drivers vulkan-utils)
endif()

find_package(assimp)
if (assimp_FOUND)
	message("assimp FOUND")
else()
	if (APPLE)
		execute_process(COMMAND brew install assimp)
	elseif (UNIX)
		execute_process(COMMAND sudo apt-get install libassimp-dev)
	endif()

endif()

#list(APPEND CMAKE_MODULE_PATH "~/.brew/lib/cmake/glfw3")
find_package(glfw3)
if (glfw3_FOUND)
	message("GLFW3 FOUND")
else()
	if (APPLE)
		execute_process(COMMAND brew install glfw3)
	elseif (UNIX)
		execute_process(COMMAND sudo apt-get install libglfw3)
	endif()
endif()

#message( ${CMAKE_CURRENT_SOURCE_DIR} )

#set(ENV{VK_ICD_FILENAMES} "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/MoltenVK/macOS/MoltenVK_icd.json")
#set(ENV{VK_LAYER_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/Validation_Layer/explicit_layer.d/macos/")

include_directories(Source)
include_directories(Modules)
include_directories(/usr/include/)
include_directories(ThirdParty/)

project(Soon)

add_subdirectory(ThirdParty)
add_subdirectory(Modules)
add_subdirectory(Source)
add_subdirectory(Exemples)
